# mensa-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.js  middleware.js  nginx.conf  openapi.yaml  package-lock.json  package.json  scraper.js  tsconfig.json
.github/workflows/: build-deploy.yml
deploy/: deployment.yml  ingress.yml  service.yml
src/: api_filter.rs  cache.rs  cache.ts  config.rs  index.ts  lib.rs  main.rs  model.rs  param_parsers.ts  scraper.ts  scrapers.rs
src/routers/v1/: allergens.ts  meals.ts  refresh.ts
src/v1/: data.ts
v1/: package-lock.json  package.json
v1/src/: middleware.ts  scraper.ts
v1/src/routers/v1/: allergens.ts
v1/src/v1/: data.ts
v2/: Cargo.toml  openapi.yaml
v2/src/: cache.rs  config.rs  lib.rs  main.rs  scrapers.rs
