[package]
name = "mensa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { default-features = false, version = "0.12.7", features = [
    "json",
    "rustls-tls",
] }
anyhow = "1.0.87"
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
serde = { version = "1.0.210", features = ["derive"] }
scraper = "0.20.0"
htmlentity = "1.3.2"
regex = "1.10.6"
futures = "0.3.30"
strum = { version = "0.26", features = ["derive"] }
itertools = "0.13.0"
chrono = "0.4.38"
envconfig = "0.11.0"
async-trait = "0.1.83"
